--- a/data_prep_for_specialties.ipynb
+++ b/data_prep_for_specialties.ipynb
@@ -27,6 +27,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "pLneFGzY7rta"
+      },
+      "source": [
+        "MULTILABEL = False\r\n",
+        "MULTICLASS = True"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "kPRbT02tiQ6R"
       },
       "source": [
@@ -34,7 +46,7 @@
         "\r\n",
         "df_bibliovid = pd.read_json(DATA_FOLDER+'bibliovid.json')"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -45,13 +57,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 148
         },
-        "outputId": "d6b7c6bf-7e35-45f3-f83d-b6749eb347a2"
+        "outputId": "41e7b6fd-5fe8-466b-a9e1-a1594a1cc507"
       },
       "source": [
         "first_file_data = df_bibliovid.iloc[0]['abstract']\r\n",
         "first_file_data"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -66,7 +78,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 44
         }
       ]
     },
@@ -77,12 +89,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ULcZDTIIUuxt",
-        "outputId": "36c466e5-2132-416d-b511-c9c2cf5f4bcd"
+        "outputId": "d6c65d30-c825-437e-e1a1-7312395355d6"
       },
       "source": [
         "df_bibliovid.iloc[0]['topics']"
       ],
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -94,7 +106,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 45
         }
       ]
     },
@@ -116,7 +128,7 @@
         "df_bibliovid = df_bibliovid.dropna(subset=['abstract'])\r\n",
         "df_bibliovid = df_bibliovid.drop(df_bibliovid[ df_bibliovid.abstract==''].index)"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -127,12 +139,12 @@
           "height": 625
         },
         "id": "qX83YtlMcX9S",
-        "outputId": "b86f2623-bd9a-4da2-f9f4-5ea6efaecf16"
+        "outputId": "86e41d35-4875-499f-a272-11d2f410e498"
       },
       "source": [
         "df_bibliovid.head()"
       ],
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +348,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 47
         }
       ]
     },
@@ -349,7 +361,19 @@
         "def vectorize(label_list,dico):\r\n",
         "    return [int(elt in label_list) for  elt in dico]"
       ],
-      "execution_count": null,
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fCN0NCFn8AR6"
+      },
+      "source": [
+        "def tokenize(label,dico):\r\n",
+        "    return dico[label]"
+      ],
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -359,7 +383,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wnts6EK48_2H",
-        "outputId": "9a34a9ff-c9cd-47b6-c4e5-a35c4ce7716b"
+        "outputId": "1ca23a08-a3b1-4702-d1b3-fced9cfce08c"
       },
       "source": [
         "spec_dict=dict()\r\n",
@@ -378,7 +402,7 @@
         "df_bibliovid['len'] = df_bibliovid['cat_text'].apply(lambda x: len(x.split(' ')))\r\n",
         "df_bibliovid = df_bibliovid.reset_index(drop=True)"
       ],
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +429,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LuhOVVcxmDO_",
-        "outputId": "3135c8ed-ba0d-4a42-e4df-9da40dbe0ad1"
+        "outputId": "c82cb18e-c930-421f-fb46-1c7f1fff52b3"
       },
       "source": [
         "!pip install -q transformers\r\n",
@@ -418,7 +442,7 @@
         "nltk.download('stopwords')\r\n",
         "nltk.download('punkt')"
       ],
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,7 +464,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 51
         }
       ]
     },
@@ -451,7 +475,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KFrjsYiLn6pV",
-        "outputId": "a012d8bf-7c74-4930-9de6-82d3b77b4723"
+        "outputId": "f1f39d51-a0e2-43c7-a3d1-99d048c8cfc9"
       },
       "source": [
         "from tqdm import tqdm\r\n",
@@ -486,7 +510,7 @@
         "    token_type_ids.append(x['token_type_ids'])\r\n",
         "    progress.update()"
       ],
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +518,7 @@
             "  0%|          | 0/371 [00:00<?, ?it/s]Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
             "/usr/local/lib/python3.6/dist-packages/transformers/tokenization_utils_base.py:2179: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
             "  FutureWarning,\n",
-            "100%|██████████| 371/371 [00:13<00:00, 27.24it/s]\n"
+            "100%|██████████| 371/371 [00:14<00:00, 26.50it/s]\n"
           ],
           "name": "stderr"
         }
@@ -526,7 +550,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 643
         },
-        "outputId": "654af044-be32-45ec-b18a-b21ded548f5f"
+        "outputId": "57c6eacd-979e-40e0-a644-4c32ddf07e29"
       },
       "source": [
         "a = df_bibliovid.copy()\r\n",
@@ -535,7 +559,7 @@
         "a['token_type_ids']=token_type_ids\r\n",
         "a.head()"
       ],
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -775,7 +799,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 53
         }
       ]
     },
@@ -796,10 +820,27 @@
       "source": [
         "import pickle\r\n",
         "\r\n",
-        "with open(DATA_FOLDER+'clean_df_bibliovid_pretreated.pkl', 'wb') as f:\r\n",
-        "  pickle.dump(a, f)"
+        "if MULTILABEL:\r\n",
+        "  with open(DATA_FOLDER+'clean_df_bibliovid_pretreated.pkl', 'wb') as f:\r\n",
+        "    pickle.dump(a, f)"
       ],
-      "execution_count": null,
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YapMQf7V9Ru1"
+      },
+      "source": [
+        "if MULTICLASS:\r\n",
+        "  a['TITLE'] = a['cat_text']\r\n",
+        "  a['CATEGORY'] = a.topics.apply(lambda x: x[1])\r\n",
+        "  a['ENCODE_CAT'] = a.CATEGORY.apply(lambda x: tokenize(x,spec_dict))\r\n",
+        "  with open(DATA_FOLDER+'mc_clean_df_bibliovid_pretreated.pkl', 'wb') as f:\r\n",
+        "    pickle.dump(a, f)"
+      ],
+      "execution_count": 55,
       "outputs": []
     }
   ]
