Removing useless comments

--- a/multilabel_specialties_from_bibliovid.ipynb
+++ b/multilabel_specialties_from_bibliovid.ipynb
@@ -46,7 +46,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,7 +84,7 @@
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "print(device)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
         "a = pd.read_pickle('/content/drive/MyDrive/PSTALN/data/clean_df_bibliovid_pretreated.pkl')\r\n",
         "a.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,7 +387,7 @@
         "LEARNING_RATE = 3e-5 #conseillé sur le papier\n",
         "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -420,7 +420,7 @@
         "            'targets': torch.tensor(self.targets[index], dtype=torch.float)\n",
         "        }"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +451,7 @@
         "training_set = CustomDataset(train_dataset)\n",
         "testing_set = CustomDataset(test_dataset)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +483,7 @@
         "training_loader = DataLoader(training_set, **train_params)\n",
         "testing_loader = DataLoader(testing_set, **test_params)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -516,7 +516,7 @@
         "model = BERTClass()\n",
         "model.to(device)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -849,7 +849,7 @@
         "  return s\r\n",
         "model_parameters_number(model)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -874,7 +874,7 @@
         "def loss_fn(outputs, targets):\n",
         "    return torch.nn.BCEWithLogitsLoss()(outputs, targets)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -885,7 +885,7 @@
       "source": [
         "optimizer = torch.optim.Adam(params =  model.parameters(), lr=LEARNING_RATE)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -894,20 +894,7 @@
         "id": "2gQqyux83LTM"
       },
       "source": [
-        "<a id='section05'></a>\n",
-        "### Fine Tuning the Model\n",
-        "\n",
-        "After all the effort of loading and preparing the data and datasets, creating the model and defining its loss and optimizer. This is probably the easier steps in the process. \n",
-        "\n",
-        "Here we define a training function that trains the model on the training dataset created above, specified number of times (EPOCH), An epoch defines how many times the complete data will be passed through the network. \n",
-        "\n",
-        "Following events happen in this function to fine tune the neural network:\n",
-        "- The dataloader passes data to the model based on the batch size. \n",
-        "- Subsequent output from the model and the actual category are compared to calculate the loss. \n",
-        "- Loss value is used to optimize the weights of the neurons in the network.\n",
-        "- After every 5000 steps the loss value is printed in the console.\n",
-        "\n",
-        "As you can see just in 1 epoch by the final step the model was working with a miniscule loss of 0.022 i.e. the network output is extremely close to the actual output."
+        "### Train the model"
       ]
     },
     {
@@ -935,7 +922,7 @@
         "            loss.backward()\n",
         "            optimizer.step()    "
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -950,7 +937,7 @@
       "source": [
         "train(EPOCHS)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1441,7 +1428,7 @@
         "            fin_outputs.extend(torch.sigmoid(outputs).cpu().detach().numpy().tolist())\n",
         "    return fin_outputs, fin_targets, loss"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1474,7 +1461,7 @@
         "    print(f\"F1 Score (Micro) = {f1_score_micro}\")\n",
         "    print(f\"F1 Score (Macro) = {f1_score_macro}\")"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1578,7 +1565,7 @@
         "model.to(device)\r\n",
         "model.eval()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
